--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon .",
-    "start": "node ."
+    "start": "node . --port 3000"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
